--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<app-header [inventoryList]="inventory" (onSelection)="whenSelected($event)">
-</app-header>
-<app-display [contents]="basket"></app-display>
+<app-header></app-header>
+<app-display></app-display>
