--- a/src/app/components/header.component.html
+++ b/src/app/components/header.component.html
@@ -14,6 +14,9 @@
       <td>
         <button type="button" (click)="dealCards()" class="md-buttonStart">Start Game</button>
       </td>
+      <td>
+          <button type="button" (click)="dealCards()" class="md-buttonRestart">Restart Game</button>
+      </td>
   </table>
 </div>
 <div>
