--- a/src/app/components/header.component.css
+++ b/src/app/components/header.component.css
@@ -5,7 +5,7 @@
   color: white;
   background-color: green;
 }
-.md-buttonReStart {
+.md-buttonRestart {
   font-size: 14px;
   text-align: center;
   text-decoration:none;
