--- a/src/app/components/header.component.html
+++ b/src/app/components/header.component.html
@@ -15,7 +15,7 @@
         <button type="button" (click)="dealCards()" class="md-buttonStart">Start Game</button>
       </td>
       <td>
-          <button type="button" (click)="dealCards()" class="md-buttonRestart">Restart Game</button>
+          <button type="button" (click)="restart()" class="md-buttonRestart">Restart Game</button>
       </td>
   </table>
 </div>
